--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <h3 class="text-animation">I'm a <span></span></h3>
             <p>As a recent MCA graduate (2024) with a strong foundation in web development, I aim to leverage my skills in HTML, CSS, JavaScript, React, and Firebase to create dynamic and responsive web applications. I am committed to continuous learning and professional growth in the tech industry.</p>
             <div class="social-icons">
-                <a href="#"><i class="bx bxl-linkedin"></i></a>
-                <a href="#"><i class="bx bxl-github"></i></a>
-                <a href="#"><i class="bx bxl-instagram"></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
+                <a href="https://www.linkedin.com/in/prasad-surap-5a318623b/"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://github.com/Prasadsurap"><i class="bx bxl-github"></i></a>
+                <a href="https://www.instagram.com/surapprasad/"><i class="bx bxl-instagram"></i></a>
+                <a href="https://x.com/Prasad98558102"><i class='bx bxl-twitter'></i></a>
             </div>
 
             <div class="btn-group">
@@ -183,9 +183,6 @@
                 </div>
 
                 <div class="input-box">
-                    <!-- <section>
-                        <option value="">+91</option>
-                    </section> -->
                     <input type="tel" name="number" placeholder="Phone Number" required>
                     <input type="text" name="Subject" placeholder="Subject" required>
                 </div>
@@ -202,10 +199,10 @@
 
     <footer class="footer">
         <div class="social">
-            <a href="#"><i class="bx bxl-linkedin"></i></a>
-                <a href="#"><i class="bx bxl-github"></i></a>
-                <a href="#"><i class="bx bxl-instagram"></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
+            <a href="https://www.linkedin.com/in/prasad-surap-5a318623b/"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://github.com/Prasadsurap"><i class="bx bxl-github"></i></a>
+                <a href="https://www.instagram.com/surapprasad/"><i class="bx bxl-instagram"></i></a>
+                <a href="https://x.com/Prasad98558102"><i class='bx bxl-twitter'></i></a>
         </div>
         <ul class="list">
             <li>
